case_psb: added notebook with training

--- a/PSB/notebooks/prepare_data.ipynb
+++ b/PSB/notebooks/prepare_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "4b6d7f92",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b48f2078",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "4  2025-04-21 13:02:51.489868  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "14ab3b78",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        " 'meta': {'status': 'ok', 'balance': 5352.1, 'today_request_count': 2152}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4c49b1ba",
    "metadata": {},
    "outputs": [],
@@ -337,247 +337,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a5d57018",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>data_ИНН</th>\n",
-       "      <th>data_КПП</th>\n",
-       "      <th>data_СЧР</th>\n",
-       "      <th>data_ОГРН</th>\n",
-       "      <th>data_ОКПО</th>\n",
-       "      <th>data_ОКФС_Код</th>\n",
-       "      <th>data_ОКФС_Наим</th>\n",
-       "      <th>data_РМСП_Кат</th>\n",
-       "      <th>data_РМСП_ДатаВкл</th>\n",
-       "      <th>data_ЕФРСБ</th>\n",
-       "      <th>...</th>\n",
-       "      <th>data_Ликвид_Дата</th>\n",
-       "      <th>data_Ликвид_Наим</th>\n",
-       "      <th>data_Контакты_Телеграм</th>\n",
-       "      <th>data_Подразд_Филиал</th>\n",
-       "      <th>data_Подразд_Представ</th>\n",
-       "      <th>data_СанкцииСтраны</th>\n",
-       "      <th>data_НедобПостЗап</th>\n",
-       "      <th>data_ЮрАдрес_НедостОпис</th>\n",
-       "      <th>data_ЮрАдрес_НедостДатаЗаписи</th>\n",
-       "      <th>data_НелегалФинСтатус</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001028755</td>\n",
-       "      <td>780601001</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1111001006698</td>\n",
-       "      <td>67882274</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Частная собственность</td>\n",
-       "      <td>МАЛОЕ ПРЕДПРИЯТИЕ</td>\n",
-       "      <td>2016-08-01</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1001001390</td>\n",
-       "      <td>100101001</td>\n",
-       "      <td>163</td>\n",
-       "      <td>1021000513984</td>\n",
-       "      <td>00245552</td>\n",
-       "      <td>42</td>\n",
-       "      <td>Смешанная российская собственность с долей соб...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1001098784</td>\n",
-       "      <td>100101001</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1021000507340</td>\n",
-       "      <td>53202755</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Частная собственность</td>\n",
-       "      <td>МАЛОЕ ПРЕДПРИЯТИЕ</td>\n",
-       "      <td>2022-01-10</td>\n",
-       "      <td>[{'Тип': 'Сведения о судебном акте', 'Дата': '...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1001095007</td>\n",
-       "      <td>100101001</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1021000507945</td>\n",
-       "      <td>51326016</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Частная собственность</td>\n",
-       "      <td>МАЛОЕ ПРЕДПРИЯТИЕ</td>\n",
-       "      <td>2016-08-01</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1001004095</td>\n",
-       "      <td>100101001</td>\n",
-       "      <td>37</td>\n",
-       "      <td>1021000534752</td>\n",
-       "      <td>16822388</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Частная собственность</td>\n",
-       "      <td>МАЛОЕ ПРЕДПРИЯТИЕ</td>\n",
-       "      <td>2021-09-10</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 111 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     data_ИНН   data_КПП  data_СЧР      data_ОГРН data_ОКПО data_ОКФС_Код  \\\n",
-       "0  1001028755  780601001        39  1111001006698  67882274            16   \n",
-       "1  1001001390  100101001       163  1021000513984  00245552            42   \n",
-       "2  1001098784  100101001         4  1021000507340  53202755            16   \n",
-       "3  1001095007  100101001         3  1021000507945  51326016            16   \n",
-       "4  1001004095  100101001        37  1021000534752  16822388            16   \n",
-       "\n",
-       "                                      data_ОКФС_Наим      data_РМСП_Кат  \\\n",
-       "0                              Частная собственность  МАЛОЕ ПРЕДПРИЯТИЕ   \n",
-       "1  Смешанная российская собственность с долей соб...                NaN   \n",
-       "2                              Частная собственность  МАЛОЕ ПРЕДПРИЯТИЕ   \n",
-       "3                              Частная собственность  МАЛОЕ ПРЕДПРИЯТИЕ   \n",
-       "4                              Частная собственность  МАЛОЕ ПРЕДПРИЯТИЕ   \n",
-       "\n",
-       "  data_РМСП_ДатаВкл                                         data_ЕФРСБ  ...  \\\n",
-       "0        2016-08-01                                                 []  ...   \n",
-       "1               NaN                                                 []  ...   \n",
-       "2        2022-01-10  [{'Тип': 'Сведения о судебном акте', 'Дата': '...  ...   \n",
-       "3        2016-08-01                                                 []  ...   \n",
-       "4        2021-09-10                                                 []  ...   \n",
-       "\n",
-       "  data_Ликвид_Дата data_Ликвид_Наим data_Контакты_Телеграм  \\\n",
-       "0              NaN              NaN                    NaN   \n",
-       "1              NaN              NaN                    NaN   \n",
-       "2              NaN              NaN                    NaN   \n",
-       "3              NaN              NaN                    NaN   \n",
-       "4              NaN              NaN                    NaN   \n",
-       "\n",
-       "  data_Подразд_Филиал data_Подразд_Представ data_СанкцииСтраны  \\\n",
-       "0                 NaN                   NaN                NaN   \n",
-       "1                 NaN                   NaN                NaN   \n",
-       "2                 NaN                   NaN                NaN   \n",
-       "3                 NaN                   NaN                NaN   \n",
-       "4                 NaN                   NaN                NaN   \n",
-       "\n",
-       "  data_НедобПостЗап data_ЮрАдрес_НедостОпис data_ЮрАдрес_НедостДатаЗаписи  \\\n",
-       "0               NaN                     NaN                           NaN   \n",
-       "1               NaN                     NaN                           NaN   \n",
-       "2               NaN                     NaN                           NaN   \n",
-       "3               NaN                     NaN                           NaN   \n",
-       "4               NaN                     NaN                           NaN   \n",
-       "\n",
-       "  data_НелегалФинСтатус  \n",
-       "0                   NaN  \n",
-       "1                   NaN  \n",
-       "2                   NaN  \n",
-       "3                   NaN  \n",
-       "4                   NaN  \n",
-       "\n",
-       "[5 rows x 111 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['data.ИНН', 'data.КПП', 'data.СЧР', 'data.ОГРН', 'data.ОКПО', 'data.ОКФС.Код', 'data.ОКФС.Наим', 'data.РМСП.Кат', 'data.РМСП.ДатаВкл', 'data.ЕФРСБ', 'data.ОКАТО.Код', 'data.ОКАТО.Наим', 'data.ОКВЭД.Код', 'data.ОКВЭД.Наим', 'data.ОКВЭД.Версия', 'data.ОКОГУ.Код', 'data.ОКОГУ.Наим', 'data.ОКОПФ.Код', 'data.ОКОПФ.Наим', 'data.ОКТМО.Код', 'data.ОКТМО.Наим', 'data.Учред.РФ', 'data.Учред.ФЛ', 'data.Учред.ПИФ', 'data.Учред.ИнОрг', 'data.Учред.РосОрг', 'data.Лиценз', 'data.Налоги.СумУпл', 'data.Налоги.СведУпл', 'data.Налоги.ОсобРежим', 'data.Налоги.СумНедоим', 'data.Налоги.СведУплГод', 'data.РегПФР.КодОрг', 'data.РегПФР.ДатаРег', 'data.РегПФР.НаимОрг', 'data.РегПФР.РегНомер', 'data.РегФНС.КодОрг', 'data.РегФНС.НаимОрг', 'data.РегФНС.АдресОрг', 'data.РегФСС.КодОрг', 'data.РегФСС.ДатаРег', 'data.РегФСС.НаимОрг', 'data.РегФСС.РегНомер', 'data.Регион.Код', 'data.Регион.Наим', 'data.СЧРГод', 'data.Статус.Код', 'data.Статус.Наим', 'data.ТекФНС.КодОрг', 'data.ТекФНС.НаимОрг', 'data.ТекФНС.ДатаПостУч', 'data.УпрОрг.ИНН', 'data.УпрОрг.ОГРН', 'data.УпрОрг.Недост', 'data.УпрОрг.ИнАдрес', 'data.УпрОрг.ДатаОГРН', 'data.УпрОрг.ИнСтрана', 'data.УпрОрг.НаимПолн', 'data.УпрОрг.НаимСокр', 'data.УпрОрг.ИнДатаРег', 'data.УпрОрг.ДатаЗаписи', 'data.УпрОрг.ИнРегНомер', 'data.УстКап.Тип', 'data.УстКап.Сумма', 'data.ДатаВып', 'data.ДатаРег', 'data.Руковод', 'data.Санкции', 'data.ЮрАдрес.ИдГАР', 'data.ЮрАдрес.Недост', 'data.ЮрАдрес.АдресРФ', 'data.ЮрАдрес.НасПункт', 'data.ЮрАдрес.МассАдрес', 'data.ДатаОГРН', 'data.Контакты.Тел', 'data.Контакты.Емэйл', 'data.Контакты.ВебСайт', 'data.НаимАнгл', 'data.НаимПолн', 'data.НаимСокр', 'data.ОКВЭДДоп', 'data.ДисквЛица', 'data.МассУчред', 'data.НедобПост', 'data.СвязУчред', 'data.ТоварЗнак', 'data.НелегалФин', 'data.ПоддержМСП', 'data.Правопредш', 'data.Правопреем', 'data.СвязУпрОрг', 'data.МассРуковод', 'meta.status', 'meta.balance', 'meta.today_request_count', 'data.Налоги.НедоимДата', 'data.ДержРеестрАО.ИНН', 'data.ДержРеестрАО.ОГРН', 'data.ДержРеестрАО.НаимПолн', 'data.Статус.ДатаЗаписи', 'data.Контакты.ВК', 'data.Ликвид.Дата', 'data.Ликвид.Наим', 'data.Контакты.Телеграм', 'data.Подразд.Филиал', 'data.Подразд.Представ', 'data.СанкцииСтраны', 'data.НедобПостЗап', 'data.ЮрАдрес.НедостОпис', 'data.ЮрАдрес.НедостДатаЗаписи', 'data.НелегалФинСтатус']\n"
+     ]
     }
    ],
    "source": [
-    "df_expanded = pd.json_normalize(data['data'])\n",
+    "df_expanded = pd.json_normalize(data['data'], max_level = 5)\n",
     "df_expanded.columns = [col.replace('.', '_') for col in df_expanded.columns]\n",
-    "df_expanded.head()"
+    "print([i for i  in df_expanded.columns])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "id": "37cfd9dc",
    "metadata": {},
    "outputs": [
@@ -585,20 +365,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['data_ИНН', 'data_КПП', 'data_СЧР', 'data_ОГРН', 'data_ОКПО',\n",
-      "       'data_ОКФС_Код', 'data_ОКФС_Наим', 'data_РМСП_Кат', 'data_РМСП_ДатаВкл',\n",
-      "       'data_ЕФРСБ',\n",
-      "       ...\n",
-      "       'data_Ликвид_Дата', 'data_Ликвид_Наим', 'data_Контакты_Телеграм',\n",
-      "       'data_Подразд_Филиал', 'data_Подразд_Представ', 'data_СанкцииСтраны',\n",
-      "       'data_НедобПостЗап', 'data_ЮрАдрес_НедостОпис',\n",
-      "       'data_ЮрАдрес_НедостДатаЗаписи', 'data_НелегалФинСтатус'],\n",
-      "      dtype='object', length=111)\n"
+      "[['1001028755' '780601001' 39 ... nan nan nan]\n",
+      " ['1001001390' '100101001' 163 ... nan nan nan]\n",
+      " ['1001098784' '100101001' 4 ... nan nan nan]\n",
+      " ...\n",
+      " ['9731052434' '772201001' 15 ... nan nan nan]\n",
+      " ['9731060192' '773101001' 37 ... nan nan nan]\n",
+      " ['9901036545' '990101001' 9 ... nan nan nan]]\n"
      ]
     }
    ],
    "source": [
-    "print(df_expanded.columns)"
+    "print(df_expanded.values)"
    ]
   },
   {
