--- a/PSB/notebooks/preprocessing.ipynb
+++ b/PSB/notebooks/preprocessing.ipynb
@@ -2855,7 +2855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "psb",
    "language": "python",
    "name": "python3"
   },
@@ -2869,7 +2869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
